redis refactored